Added support for all kmods to apu2c4-extras

--- a/apu2c4-extras.config
+++ b/apu2c4-extras.config
@@ -1,6 +1,7 @@
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_Generic=y
+CONFIG_ALL_KMODS=y
 CONFIG_DEVEL=y
 CONFIG_KERNEL_DEVMEM=y
 CONFIG_LIBCURL_COOKIES=y
