--- a/apu2c4-extras.config
+++ b/apu2c4-extras.config
@@ -88,6 +88,7 @@ CONFIG_PACKAGE_libatomic=y
 CONFIG_PACKAGE_libattr=y
 CONFIG_PACKAGE_libavahi-client=y
 CONFIG_PACKAGE_libavahi-dbus-support=y
+CONFIG_PACKAGE_libbz2=y
 CONFIG_PACKAGE_libcap=y
 CONFIG_PACKAGE_libcares=y
 CONFIG_PACKAGE_libcurl=y
@@ -95,12 +96,17 @@ CONFIG_PACKAGE_libdaemon=y
 CONFIG_PACKAGE_libdbus=y
 CONFIG_PACKAGE_libelf=y
 CONFIG_PACKAGE_libev=y
+CONFIG_PACKAGE_libexif=y
 CONFIG_PACKAGE_libexpat=y
+CONFIG_PACKAGE_libffmpeg-audio-dec=y
+CONFIG_PACKAGE_libflac=y
 CONFIG_PACKAGE_libftdi1=y
 CONFIG_PACKAGE_libgmp=y
 CONFIG_PACKAGE_libgnutls=y
+CONFIG_PACKAGE_libid3tag=y
 CONFIG_PACKAGE_libiwinfo=y
 CONFIG_PACKAGE_libiwinfo-lua=y
+CONFIG_PACKAGE_libjpeg=y
 CONFIG_PACKAGE_libkmod=y
 CONFIG_PACKAGE_liblua=y
 CONFIG_PACKAGE_liblucihttp=y
@@ -110,22 +116,26 @@ CONFIG_PACKAGE_libmbedtls=y
 CONFIG_PACKAGE_libmount=y
 CONFIG_PACKAGE_libncurses=y
 CONFIG_PACKAGE_libnettle=y
+CONFIG_PACKAGE_libogg=y
 CONFIG_PACKAGE_libopenssl=y
 CONFIG_PACKAGE_libopenssl-conf=y
 CONFIG_PACKAGE_libpci=y
 CONFIG_PACKAGE_libpopt=y
 CONFIG_PACKAGE_libreadline=y
+CONFIG_PACKAGE_libsqlite3=y
 CONFIG_PACKAGE_libtasn1=y
 CONFIG_PACKAGE_libtirpc=y
 CONFIG_PACKAGE_libubus-lua=y
 CONFIG_PACKAGE_libusb-1.0=y
 CONFIG_PACKAGE_libusb-compat=y
 CONFIG_PACKAGE_libustream-openssl=y
+CONFIG_PACKAGE_libvorbis=y
 CONFIG_PACKAGE_lua=y
 CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-hd-idle=y
 CONFIG_PACKAGE_luci-app-https-dns-proxy=y
+CONFIG_PACKAGE_luci-app-minidlna=y
 CONFIG_PACKAGE_luci-app-openvpn=y
 CONFIG_PACKAGE_luci-app-opkg=y
 CONFIG_PACKAGE_luci-app-samba4=y
@@ -143,6 +153,7 @@ CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-proto-ppp=y
 CONFIG_PACKAGE_luci-ssl-openssl=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
+CONFIG_PACKAGE_minidlna=y
 CONFIG_PACKAGE_nano=y
 CONFIG_PACKAGE_openssl-util=y
 CONFIG_PACKAGE_openvpn-easy-rsa=y
@@ -165,5 +176,11 @@ CONFIG_PACKAGE_zlib=y
 CONFIG_SAMBA4_SERVER_AVAHI=y
 CONFIG_SAMBA4_SERVER_NETBIOS=y
 CONFIG_SAMBA4_SERVER_VFS=y
+CONFIG_SQLITE3_DYNAMIC_EXTENSIONS=y
+CONFIG_SQLITE3_FTS3=y
+CONFIG_SQLITE3_FTS4=y
+CONFIG_SQLITE3_FTS5=y
+CONFIG_SQLITE3_JSON1=y
+CONFIG_SQLITE3_RTREE=y
 CONFIG_TARGET_OPTIMIZATION="-Os -pipe -march=btver2"
 CONFIG_TARGET_OPTIONS=y
