--- a/apu2c4-extras.config
+++ b/apu2c4-extras.config
@@ -84,10 +84,12 @@ CONFIG_OPENVPN_openssl_ENABLE_SMALL=y
 CONFIG_PACKAGE_amd64-microcode=y
 CONFIG_PACKAGE_attr=y
 CONFIG_PACKAGE_avahi-dbus-daemon=y
+CONFIG_PACKAGE_bash=y
 CONFIG_PACKAGE_block-mount=y
 CONFIG_PACKAGE_btrfs-progs=y
 CONFIG_PACKAGE_ca-bundle=y
 CONFIG_PACKAGE_ca-certificates=y
+CONFIG_PACKAGE_cache-domains-openssl=y
 CONFIG_PACKAGE_cgi-io=y
 CONFIG_PACKAGE_cgroupfs-mount=y
 CONFIG_PACKAGE_containerd=y
@@ -96,12 +98,14 @@ CONFIG_PACKAGE_dmidecode=y
 CONFIG_PACKAGE_docker-ce=y
 CONFIG_PACKAGE_flashrom=y
 CONFIG_PACKAGE_fstrim=y
+CONFIG_PACKAGE_haproxy=y
 CONFIG_PACKAGE_hd-idle=y
 CONFIG_PACKAGE_https-dns-proxy=y
 CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
 CONFIG_PACKAGE_iptables-mod-extra=y
 CONFIG_PACKAGE_iptables-mod-ipopt=y
 CONFIG_PACKAGE_irqbalance=y
+CONFIG_PACKAGE_jq=y
 CONFIG_PACKAGE_kmod-asn1-decoder=y
 CONFIG_PACKAGE_kmod-br-netfilter=y
 CONFIG_PACKAGE_kmod-crypto-acompress=y
@@ -201,6 +205,7 @@ CONFIG_PACKAGE_libiwinfo=y
 CONFIG_PACKAGE_libiwinfo-lua=y
 CONFIG_PACKAGE_libjpeg=y
 CONFIG_PACKAGE_libkmod=y
+CONFIG_PACKAGE_libltdl=y
 CONFIG_PACKAGE_liblua=y
 CONFIG_PACKAGE_liblucihttp=y
 CONFIG_PACKAGE_liblucihttp-lua=y
@@ -214,6 +219,7 @@ CONFIG_PACKAGE_libogg=y
 CONFIG_PACKAGE_libopenssl=y
 CONFIG_PACKAGE_libopenssl-conf=y
 CONFIG_PACKAGE_libpci=y
+CONFIG_PACKAGE_libpcre=y
 CONFIG_PACKAGE_libpopt=y
 CONFIG_PACKAGE_libreadline=y
 CONFIG_PACKAGE_libseccomp=y
@@ -268,6 +274,7 @@ CONFIG_PACKAGE_sqm-scripts-extra=y
 CONFIG_PACKAGE_tc=y
 CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_tini=y
+CONFIG_PACKAGE_uclibcxx=y
 CONFIG_PACKAGE_uhttpd=y
 CONFIG_PACKAGE_wsdd2=y
 CONFIG_PACKAGE_zlib=y
@@ -281,5 +288,7 @@ CONFIG_SQLITE3_FTS4=y
 CONFIG_SQLITE3_FTS5=y
 CONFIG_SQLITE3_JSON1=y
 CONFIG_SQLITE3_RTREE=y
+CONFIG_TARGET_KERNEL_PARTSIZE=64
 CONFIG_TARGET_OPTIMIZATION="-Os -pipe -march=btver2"
 CONFIG_TARGET_OPTIONS=y
+CONFIG_TARGET_ROOTFS_PARTSIZE=1024
