--- a/apu2c4-extras.config
+++ b/apu2c4-extras.config
@@ -85,6 +85,8 @@ CONFIG_PACKAGE_amd64-microcode=y
 CONFIG_PACKAGE_attr=y
 CONFIG_PACKAGE_avahi-dbus-daemon=y
 CONFIG_PACKAGE_bash=y
+CONFIG_PACKAGE_bind-host=y
+CONFIG_PACKAGE_bind-libs=y
 CONFIG_PACKAGE_block-mount=y
 CONFIG_PACKAGE_btrfs-progs=y
 CONFIG_PACKAGE_ca-bundle=y
@@ -93,7 +95,10 @@ CONFIG_PACKAGE_cache-domains-openssl=y
 CONFIG_PACKAGE_cgi-io=y
 CONFIG_PACKAGE_cgroupfs-mount=y
 CONFIG_PACKAGE_containerd=y
+CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_dbus=y
+CONFIG_PACKAGE_ddns-scripts=y
+CONFIG_PACKAGE_ddns-scripts_cloudflare.com-v4=y
 CONFIG_PACKAGE_dmidecode=y
 CONFIG_PACKAGE_docker-ce=y
 CONFIG_PACKAGE_flashrom=y
@@ -233,6 +238,7 @@ CONFIG_PACKAGE_libustream-openssl=y
 CONFIG_PACKAGE_libvorbis=y
 CONFIG_PACKAGE_lua=y
 CONFIG_PACKAGE_luci=y
+CONFIG_PACKAGE_luci-app-ddns=y
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-hd-idle=y
 CONFIG_PACKAGE_luci-app-https-dns-proxy=y
@@ -244,6 +250,7 @@ CONFIG_PACKAGE_luci-app-sqm=y
 CONFIG_PACKAGE_luci-base=y
 CONFIG_PACKAGE_luci-compat=y
 CONFIG_PACKAGE_luci-lib-ip=y
+CONFIG_PACKAGE_luci-lib-ipkg=y
 CONFIG_PACKAGE_luci-lib-jsonc=y
 CONFIG_PACKAGE_luci-lib-nixio=y
 CONFIG_PACKAGE_luci-mod-admin-full=y
