--- a/apu2c4-extras.config
+++ b/apu2c4-extras.config
@@ -105,6 +105,7 @@ CONFIG_PACKAGE_flashrom=y
 CONFIG_PACKAGE_fstrim=y
 CONFIG_PACKAGE_haproxy=y
 CONFIG_PACKAGE_hd-idle=y
+CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_https-dns-proxy=y
 CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
 CONFIG_PACKAGE_iptables-mod-extra=y
