--- a/apu2c4-extras.config
+++ b/apu2c4-extras.config
@@ -3,6 +3,7 @@ CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_Generic=y
 CONFIG_ALL_KMODS=y
 CONFIG_DEVEL=y
+CONFIG_ATH10K_THERMAL=y
 CONFIG_CONTAINERD_SECCOMP=y
 CONFIG_DOCKER_KERNEL_OPTIONS=y
 CONFIG_DOCKER_NET_ENCRYPT=y
@@ -24,13 +25,13 @@ CONFIG_KERNEL_BLK_DEV_THROTTLING=y
 CONFIG_KERNEL_BTRFS_FS_POSIX_ACL=y
 CONFIG_KERNEL_CFQ_GROUP_IOSCHED=y
 CONFIG_KERNEL_CFS_BANDWIDTH=y
+CONFIG_KERNEL_CGROUPS=y
 CONFIG_KERNEL_CGROUP_CPUACCT=y
 CONFIG_KERNEL_CGROUP_DEVICE=y
 CONFIG_KERNEL_CGROUP_FREEZER=y
 CONFIG_KERNEL_CGROUP_PERF=y
 CONFIG_KERNEL_CGROUP_PIDS=y
 CONFIG_KERNEL_CGROUP_SCHED=y
-CONFIG_KERNEL_CGROUPS=y
 CONFIG_KERNEL_CPUSETS=y
 CONFIG_KERNEL_DEVMEM=y
 CONFIG_KERNEL_EXT4_FS_POSIX_ACL=y
@@ -82,6 +83,7 @@ CONFIG_OPENVPN_openssl_ENABLE_PORT_SHARE=y
 CONFIG_OPENVPN_openssl_ENABLE_SERVER=y
 CONFIG_OPENVPN_openssl_ENABLE_SMALL=y
 CONFIG_PACKAGE_amd64-microcode=y
+CONFIG_PACKAGE_ath10k-firmware-qca988x-ct-htt=y
 CONFIG_PACKAGE_attr=y
 CONFIG_PACKAGE_avahi-dbus-daemon=y
 CONFIG_PACKAGE_bash=y
@@ -105,15 +107,21 @@ CONFIG_PACKAGE_flashrom=y
 CONFIG_PACKAGE_fstrim=y
 CONFIG_PACKAGE_haproxy=y
 CONFIG_PACKAGE_hd-idle=y
+CONFIG_PACKAGE_hostapd-common=y
+CONFIG_PACKAGE_hostapd-openssl=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_https-dns-proxy=y
 CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
 CONFIG_PACKAGE_iptables-mod-extra=y
 CONFIG_PACKAGE_iptables-mod-ipopt=y
 CONFIG_PACKAGE_irqbalance=y
+CONFIG_PACKAGE_iw=y
 CONFIG_PACKAGE_jq=y
 CONFIG_PACKAGE_kmod-asn1-decoder=y
+CONFIG_PACKAGE_kmod-ath=y
+CONFIG_PACKAGE_kmod-ath10k-ct=y
 CONFIG_PACKAGE_kmod-br-netfilter=y
+CONFIG_PACKAGE_kmod-cfg80211=y
 CONFIG_PACKAGE_kmod-crypto-acompress=y
 CONFIG_PACKAGE_kmod-crypto-aead=y
 CONFIG_PACKAGE_kmod-crypto-authenc=y
@@ -165,6 +173,7 @@ CONFIG_PACKAGE_kmod-lib-xor=y
 CONFIG_PACKAGE_kmod-lib-zlib-deflate=y
 CONFIG_PACKAGE_kmod-lib-zlib-inflate=y
 CONFIG_PACKAGE_kmod-lib-zstd=y
+CONFIG_PACKAGE_kmod-mac80211=y
 CONFIG_PACKAGE_kmod-macvlan=y
 CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
 CONFIG_PACKAGE_kmod-nf-ipvs=y
@@ -178,6 +187,7 @@ CONFIG_PACKAGE_kmod-sched-cake=y
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-sound-core=y
 CONFIG_PACKAGE_kmod-sp5100_tco=y
+CONFIG_PACKAGE_kmod-thermal=m
 CONFIG_PACKAGE_kmod-tun=y
 CONFIG_PACKAGE_kmod-udptunnel4=y
 CONFIG_PACKAGE_kmod-usb-core=y
@@ -285,6 +295,7 @@ CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_tini=y
 CONFIG_PACKAGE_uclibcxx=y
 CONFIG_PACKAGE_uhttpd=y
+CONFIG_PACKAGE_wireless-regdb=y
 CONFIG_PACKAGE_wsdd2=y
 CONFIG_PACKAGE_zlib=y
 CONFIG_RUNC_SECCOMP=y
