--- a/apu2c4-extras.config
+++ b/apu2c4-extras.config
@@ -303,6 +303,7 @@ CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_tini=y
 CONFIG_PACKAGE_uclibcxx=y
 CONFIG_PACKAGE_uhttpd=y
+CONFIG_PACKAGE_uhttpd-mod-ubus=y
 CONFIG_PACKAGE_wireless-regdb=y
 CONFIG_PACKAGE_wsdd2=y
 CONFIG_PACKAGE_zlib=y
